<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_round_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_electric_car_24"
            android:title="@string/LaporanKejadian" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_contact_mail_24"
            android:title="@string/LaporanKerusakan" />
        <item
            android:id="@+id/signo"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/LOGOUT"/>
    </group>
</menu>