<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.gallery.TambahLAKA"
    android:padding="14dp"
    android:backgroundTint="@color/white"
    android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menutambahlaka"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spinnerRuas"
            android:layout_marginTop="16dp"
            android:entries="@array/ruas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ruas"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/LokasiKejadian"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lokasikej"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autofillHints="LokasiKejadian"
                android:hint="@string/LokasiKejadian"
                android:inputType="text"
                android:textColorHint="#757575"
                android:textSize="@dimen/textsize"
                android:padding="@dimen/paddingbox"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <Spinner
            android:entries="@array/Kejadian"
            android:id="@+id/spinnerkejadian"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:autofillHints="Kejadian"
            style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tanggalkejadian"
            style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:text="@string/tanggal"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:textColorHint="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/uraianlanjut"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingbox"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:hintTextColor="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uraianpesan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autofillHints="LokasiKejadian"
                android:hint="@string/uraianpesan"
                android:inputType="text"
                android:textColorHint="#757575"
                android:textSize="@dimen/textsize"
                android:padding="@dimen/paddingbox"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:text="@string/Submit"
            />
</LinearLayout>