<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uilogin.LoginActivity"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="14dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/REGISTER"
            android:textSize="24sp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/paddingbox"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:hint="@string/Nama"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/paddingbox"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/paddingbox"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:boxBackgroundColor="@color/white"
            app:passwordToggleEnabled="true"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/paddingbox"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:boxBackgroundColor="@color/white"
            app:passwordToggleEnabled="true"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordconf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/passwordconf"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/REGISTER"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/LOGIN"/>
    </LinearLayout>
</ScrollView>